[project]
name = "practicex-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack Tyler",email = "hepavista@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "black (>=26.3.1,<27.0.0)",
    "uvicorn (>=0.45.0,<0.46.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
